Added User, Role endpoints
